--- a/LottoApp/MainWindow.xaml
+++ b/LottoApp/MainWindow.xaml
@@ -39,13 +39,14 @@
                 <Border Height="200"
                         Width="170"
                         CornerRadius="20"
-                        Background="#54B435">
+                        Background="#54B435"
+                        Padding="5">
                     <StackPanel>
-                        <TextBlock TextWrapping="Wrap" Text="Tippek" x:Name="Tippek" Foreground="white" HorizontalAlignment="Center" FontSize="16" Margin="0,10">
+                        <TextBlock TextWrapping="Wrap" Text="Tippek" x:Name="Tippek" Foreground="white" FontSize="16" Margin="0,10">
                         </TextBlock>
-                        <TextBlock Text="Sorsolás eredménye" Foreground="white" HorizontalAlignment="Center" FontSize="16" Margin="0,10">
+                        <TextBlock x:Name="sorsolas" Text="Sorsolás eredménye" Foreground="white" FontSize="16" Margin="0,10">
                         </TextBlock>
-                        <TextBlock Text="Sorsolás eredménye" Foreground="white" HorizontalAlignment="Center" FontSize="16" Margin="0,10">
+                        <TextBlock Text="Eltalált számok" x:Name="eredmeny" Foreground="white" FontSize="16" Margin="0,10">
                         </TextBlock>
                     </StackPanel>
                 </Border>
